; ModuleID = '/home/carl/AnghaBench/macvim/src/extr_os_mswin.c__chdrive.c'
source_filename = "/home/carl/AnghaBench/macvim/src/extr_os_mswin.c__chdrive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const._chdrive.temp = private unnamed_addr constant [3 x i8] c"-:\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_chdrive(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [3 x i8], align 1
  store i32 %0, i32* %2, align 4
  %4 = bitcast [3 x i8]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 1 %4, i8* align 1 getelementptr inbounds ([3 x i8], [3 x i8]* @__const._chdrive.temp, i32 0, i32 0), i64 3, i1 false)
  %5 = load i32, i32* %2, align 4
  %6 = add nsw i32 %5, 65
  %7 = sub nsw i32 %6, 1
  %8 = trunc i32 %7 to i8
  %9 = getelementptr inbounds [3 x i8], [3 x i8]* %3, i64 0, i64 0
  store i8 %8, i8* %9, align 1
  %10 = getelementptr inbounds [3 x i8], [3 x i8]* %3, i64 0, i64 0
  %11 = call i32 @SetCurrentDirectory(i8* %10)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  ret i32 %14
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @SetCurrentDirectory(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
